# diff_drive_controller

./: CMakeLists.txt  package.xml  upload_sketch_mega.sh
config/: medicbot_diff_drive_controller.yaml  robot_diff_drive_controller.yaml
include/medicbot_control/: medicbot_hw_interface.h
include/robot_control/: robot_hw_interface.cpp
joy_subscriber/: joy_subscriber.ino
launch/: medicbot_diff_drive_controller.launch  robot_diff_drive_controller.launch
libs/arduino_serial/: arduino_serial.c  arduino_serial.h  arduino_test  arduino_test.c  arduino_test.c.old
src/: medicbot_hw_interface.cpp  medicbot_hw_main.cpp  robot_hw_interface.cpp  robot_hw_main.cpp
