<?xml version="1.0"?>
<package>
  <name>medicbot_control</name>
  <version>0.0.1</version>
  <description>Simple simulation interface and template for setting up a hardware interface for medicbot</description>

  <maintainer email="someone@someone.com">Someone</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_control_boilerplate</build_depend>

  <run_depend>ros_control_boilerplate</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>cv_camera</run_depend>
  <run_depend>realsense2_camera</run_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>ros_controllers</run_depend>

  <export>
  </export>
</package>
